# IR-API

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-and-push.yml  codeql.yml  dependency-review.yml  formatting_and_linting.yml  image-scan.yml  linting.yml  scorecards.yml  tests.yml
container/: fia_api.D
fia_api/: exception_handlers.py  fia_api.py  router.py
fia_api/core/: exceptions.py  model.py  repositories.py  responses.py  utility.py
fia_api/core/auth/: __init__.py  experiments.py  tokens.py
fia_api/core/services/: instrument.py  reduction.py  run.py
fia_api/core/specifications/: base.py  instrument.py  reduction.py  run.py
fia_api/plotting/: plot_service.py
fia_api/scripts/: acquisition.py  pre_script.py
fia_api/scripts/transforms/: factory.py  mantid_transform.py  mari_transforms.py  osiris_transform.py  test_transforms.py  tosca_transform.py  transform.py
ir_api/core/: repositories.py
ir_api/scripts/: acquisition.py
test/: utils.py
test/core/: test_repositories_integration.py  test_responses.py  test_utility.py
test/core/auth/: test_experiments.py  test_tokens.py
test/core/services/: test_reduction.py  test_run.py
test/e2e/: conftest.py  test_core.py  test_scripts.py
test/scripts/: test_acquisition.py
test/scripts/transforms/: test_factory.py  test_mantid_transform.py  test_mari_transforms.py  test_osiris_transform.py  test_tosca_transform.py
utils/: db_generator.py
