[project]
name = "fia-api"
readme = "README.md"
version = "0.0.1"
dependencies = [
    "fastapi[all]==0.110.1",
    "psycopg2==2.9.9",
    "SQLAlchemy==2.0.29",
    "pydantic==2.7.0",
    "uvicorn==0.29.0",
    "requests==2.31.0"
]

[project.urls]
"Repository" = "https://github.com/fiaisis/fia-api"

[project.optional-dependencies]
formatting = [
    "black==24.4.0"
]

test = [
    "pytest==8.1.1",
    "requests==2.31.0",
    "httpx==0.27.0",
    "pytest-cov==5.0.0",
    "pytest-random-order==1.1.1",
    "Faker==24.9.0"

]

code-inspection = [
    "pylint==3.1.0",
    "mypy==1.9.0",
    "fia-api[test]",
    "types-requests==2.31.0.20240406",
    "types-urllib3==1.26.25.14"
]

dev = [
    "fia-api[code-inspection]",
    "fia-api[formatting]",
]


[tool.setuptools]
packages = ["fia_api"]