[project]
name = "fia-api"
readme = "README.md"
version = "0.0.1"
dependencies = [
    "fastapi[all]==0.111.0",
    "psycopg2==2.9.9",
    "SQLAlchemy==2.0.30",
    "pydantic==2.7.3",
    "uvicorn==0.30.1",
    "requests==2.32.3"
]

[project.urls]
"Repository" = "https://github.com/fiaisis/fia-api"

[project.optional-dependencies]
formatting = [
    "black==24.4.2"
]

test = [
    "pytest==8.2.2",
    "requests==2.32.3",
    "httpx==0.27.0",
    "pytest-cov==5.0.0",
    "pytest-random-order==1.1.1",
    "Faker==25.8.0"

]

code-inspection = [
    "pylint==3.2.3",
    "mypy==1.10.0",
    "fia-api[test]",
    "types-requests==2.32.0.20240602",
    "types-urllib3==1.26.25.14"
]

dev = [
    "fia-api[code-inspection]",
    "fia-api[formatting]",
]


[tool.setuptools]
packages = ["fia_api"]